# RoboticsStudyGroup

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md
Docs/: books.md  online_courses.md
Docs/Slides/: ROBOTICS.pptx
Docs/design/duckietown/tiles/: Duckietown_tile.cdr
Labs/: README.md
Labs/Ashil/: launch_docker.bash  launch_docker_kinetic.bash
Labs/Ashil/Projects/Proj1/models/4wheelbot/: model.config  model.sdf
Labs/Ashil/Projects/Proj1/models/house/: model.sdf
Labs/Ashil/Projects/Proj1/models/maze/: model.sdf
Labs/Ashil/Projects/Proj1/models/maze1/: model.sdf
Labs/Ashil/Projects/Proj1/scripts/: CMakeLists.txt  hello_world.cc  helloworld.cc  mazeworld.cc  model_push.cc
Labs/Ashil/Projects/Proj1/worlds/: factory.world  factory1.world  hello.world  mazeworld  mazeworld.world  model_push.world
Labs/Ashil/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
Labs/Ashil/catkin_ws/src/beginner_tutorials/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  listener.cpp  talker.cpp
Labs/Ashil/catkin_ws/src/simple_arm/: CMakeLists.txt
Labs/Harshang/Projects/Proj1/scripts/: CMakeLists.txt  factory.cc  model_push.cc  plugin_tutorial.cc  plugin_tutorial.world
Labs/Harshang/Projects/Proj1/worlds/: world_spawn.world
Labs/Harshang/bagfiles/: 2019-07-02-11-03-24.bag  subset.bag
Labs/Harshang/catkin_ws/: params.yaml
Labs/Harshang/catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
Labs/Harshang/catkin_ws/src/simple_arm/: CMakeLists.txt
Labs/Lab0/: Pre-requisite.md  PythonTutorial.ipynb  README.md  git.ipynb
(+19 files in other folders)
